You can find the list of outstanding bugs on BerliOS here:

http://developer.berlios.de/bugs/?func=browse&group_id=2134&set=open

BerliOS Bugs are marked with (BerliOS #XXXX).

====================================================================

0.80: please submit patches for this section with actual code/doc
      patches!
* pam_tally: test for NULL data before dereferencing them (t8m)

0.79: Thu Mar 31 16:48:45 CEST 2005
* pam_tally: added audit option (toady)
* pam_unix: don't log user unknown failure when he can be properly
  authenticated by another module (t8m)
* configure: don't abort if no cracklib dictinaries were found, but
  warn user that pam_cracklib will not be built (kukuk)
* modules/pam_unix/support.c: Fix return value if user aborts while
  changes the password (Bug 872945 - kukuk)
* modules/pam_unix/support.c: Fix return value for an unknown user
  (Bug 872943 - kukuk)
* pam_limits: support for new Linux kernel 2.6 limits (from toby cabot
  - t8m)
* pam_tally: major rewrite of the module (t8m)
* libpam: don't return PAM_IGNORE for OK or JUMP actions if using
  cached chain (Bug 629251 - t8m)
* pam_nologin: don't overwrite return value with return from
  pam_get_item (t8m)
* libpam: Add more checks for broken PAM configuration files to
  avoid seg.faults (kukuk)
* pam_shells: correct README
* libpam: Fix debug code (kukuk)
* pam_limits: Fix order of LIMITS_DEF_* priorities (kukuk)
* pam_xauth: preserve DISPLAY variable (Novell #66885 - kukuk)
* libpam: Add prelude ids (http://www.prelude-ids.org) support, 
  as experimental. (toady)
* configure: Add the directory where new versions of cracklib is 
  installed (from Jim Gifford - toady) 

0.78: Do Nov 18 14:48:36 CET 2004

* pam_unix: change the order of trying password changes - local first,
  NIS second (t8m)
* pam_wheel: add option only_root to make it affect authentication 
  to root account only
* pam_unix: test return values on renaming files and report error to
  syslog and to user